<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ManagerPanel.AddEventActivity"
    android:background="@drawable/employee_home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/etAddEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/etAddEventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startTime"
        android:textSize="25sp"/>
    <DatePicker
        android:id="@+id/etAddEventStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endTime"
        android:textSize="25sp"/>
    <DatePicker
        android:id="@+id/etAddEventEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"/>

    <Button
        android:id="@+id/btnAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

</LinearLayout>