<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customer_global_background"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_order_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/text_order_detail"/>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_detail"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="12dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/item_view_layout"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/orderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/date"
                android:layout_margin="3dp"
                android:text="@string/text_order_number"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_date"
                    android:textColor="@color/btcheckout"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/roomType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date"
                    android:layout_marginLeft="50dp"
                    android:text="@string/text_room_type"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/roomQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@id/roomType"
                    android:text="@string/text_quantity"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/orderMeals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roomType"
                    android:text="@string/text_order_meals"
                    android:textColor="@color/btcheckout"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/meals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/orderMeals"
                    android:layout_marginLeft="50dp"
                    android:text="@string/text_meals"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mealsQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/orderMeals"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@id/roomType"
                    android:text="@string/text_quantity"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/meals"
                    android:layout_marginLeft="160dp"
                    android:text="@string/text_price"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvSp_line"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#000000" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="141dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/discounted_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/text_discounted_detail"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/discounted_detail"
                    android:layout_alignLeft="@id/discounted_detail"
                    android:layout_marginLeft="125sp"
                    android:text="@string/text_discount"
                    android:textColor="@color/red"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/discount2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/discounted_detail"
                    android:layout_alignLeft="@id/discount"
                    android:layout_marginLeft="38dp"
                    android:text="@string/text_discount2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/discount"
                    android:layout_marginLeft="60dp"
                    android:text="@string/text_bfdiscount"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/last_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/price"
                    android:layout_marginLeft="60dp"
                    android:text="@string/text_last_price"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/last_prices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/last_price"
                    android:layout_marginLeft="90dp"
                    android:text="@string/text_tot_price"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:background="@color/white"
        android:padding="16dp"
        android:layout_below="@id/cardview"
        android:layout_marginLeft="250dp">

        <android.support.design.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#a3baa5">

    <Button
        android:id="@+id/btheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/buttonstyle"
        android:onClick="onOkClick"
        android:text="@string/text_checkout"/>

        </android.support.design.widget.CoordinatorLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>